creating react for the site

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 
 <body>
     <header id="home">
-        <div class="brand-picture"></div>
+        <div class="brand-picture">
+            <img src="images/profile.jpg" alt="BrandPic" class="brand-pic">
+        </div>
     
         <div class="Names-Co">
             <h1>Brand Name</h1>
-            <p>Welcome to the (brand name) where you Discover the 
-                Guidance Beyond—Connect with Spirit, and Find Your Path.
+            <p>
+                Welcome to the (brand name) where you Discover the 
+                Guidance Beyond and Connect with Spirit, and Find Your Path.
                 Here, we will help unlock your inner star power: Discover 
                 your comic!
             </p>
