adding the body and incorperating tailwind css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
 <body>
     <header id="home">
-        <div class="brand-picture">
-            <img src="images/profile.jpg" alt="BrandPic" class="brand-pic">
-        </div>
+        <div class="brand-picture"></div>
     
         <div class="Names-Co">
             <h1>Brand Name</h1>
